# bill-breaker

./: .gitignore  README.md  main.py  pyproject.toml
email_tools/: __init__.py  gmail_con.py  parse_email.py
